--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,7 +2,7 @@ development:
 #  adapter: async
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: quiz_production
+  channel_prefix: quiz_development
 
 test:
   adapter: test
