Quiz start/stop messages added

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials.yml.enc
 
 /dump.rdb
+/nohup.out
